--- a/lovelace/views/00_home_modern/group_bulbs.yaml
+++ b/lovelace/views/00_home_modern/group_bulbs.yaml
@@ -9,7 +9,7 @@
         - name: Taula
         - entity: light.mesa
         - state:
-            - color: "#BAC0C6"
+            - color: "#999999"
               icon: "mdi:ceiling-light"
               value: "off"
             - color: "rgb(251, 210, 41)"
@@ -23,7 +23,7 @@
         - name: Sofà
         - entity: light.sofa
         - state:
-            - color: "#BAC0C6"
+            - color: "#999999"
               icon: "mdi:floor-lamp"
               value: "off"
             - color: "rgb(251, 210, 41)"
@@ -37,7 +37,7 @@
         - name: Tele
         - entity: light.mesita
         - state:
-            - color: "#BAC0C6"
+            - color: "#999999"
               icon: "mdi:lightbulb"
               value: "off"
             - color: "rgb(251, 210, 41)"
@@ -51,7 +51,7 @@
     #     - name: Ventilador
     #     - entity: switch.ventilador
     #     - state:
-    #         - color: "#BAC0C6"
+    #         - color: "#999999"
     #           icon: "mdi:fan-off"
     #           value: "off"
     #         - color: "rgb(251, 210, 41)"
@@ -67,7 +67,7 @@
         - name: Cuina
         - entity: light.encimera
         - state:
-            - color: "#BAC0C6"
+            - color: "#999999"
               icon: "mdi:lightbulb"
               value: "off"
             - color: "rgb(251, 210, 41)"
@@ -81,7 +81,7 @@
         - name: Entrada
         - entity: light.entrada
         - state:
-            - color: "#BAC0C6"
+            - color: "#999999"
               icon: "mdi:lightbulb"
               value: "off"
             - color: "rgb(251, 210, 41)"
@@ -95,7 +95,7 @@
         - name: Xiaomi
         - entity: light.gateway_light
         - state:
-            - color: "#BAC0C6"
+            - color: "#999999"
               icon: "mdi:hubspot"
               value: "off"
             - color: "rgb(251, 210, 41)"
