--- a/lovelace/views/50_systems.yaml
+++ b/lovelace/views/50_systems.yaml
@@ -3,302 +3,21 @@ title: System
 path: system
 badges: []
 cards:
-  - type: vertical-stack
-    cards:
-      - type: markdown
-        content: |
-          # pi4.sys.aleix.cloud
-        style: |
-          ha-card {
-            font-family: Roboto, 'Open Sans', sans-serif;
-            font-size: 100%;
-            -webkit-box-shadow: none;
-            -moz-box-shadow: none;
-            box-shadow: none;
-            text-align: left;
-            background: rgba(0,0,0,0);
-            text-align: center;
-          }
-          h1 {
-            color: white;
-            font-weight: 300 !important;
-            margin: 0px;
-          }
-      - type: horizontal-stack
-        cards:
-          - type: 'custom:mini-graph-card'
-            name: CPU
-            hours_to_show: 6
-            lower_bound: 0
-            upper_bound: 100
-            color_thresholds:
-              - value: 0
-                color: "#37c23b"
-              - value: 50
-                color: "#37c23b"
-              - value: 70
-                color: "#f8841e"
-              - value: 90
-                color: "#eb0c0c"
-            points_per_hour: 10
-            entities:
-              - entity: sensor.glances_cpu_used
-                show_fill: false
-                show_points: true
-            line_color: orange
-            line_width: 7
-          - type: 'custom:mini-graph-card'
-            name: RAM
-            hours_to_show: 6
-            lower_bound: 0
-            upper_bound: 100
-            color_thresholds:
-              - value: 0
-                color: "#37c23b"
-              - value: 50
-                color: "#37c23b"
-              - value: 70
-                color: "#f8841e"
-              - value: 90
-                color: "#eb0c0c"
-            points_per_hour: 10
-            entities:
-              - entity: sensor.glances_ram_used_percent
-                show_fill: false
-                show_points: true
-            line_color: orange
-            line_width: 7
-          - type: 'custom:mini-graph-card'
-            name: Disk
-            hours_to_show: 6
-            lower_bound: 0
-            upper_bound: 100
-            color_thresholds:
-              - value: 0
-                color: "#37c23b"
-              - value: 50
-                color: "#37c23b"
-              - value: 70
-                color: "#f8841e"
-              - value: 90
-                color: "#eb0c0c"
-            points_per_hour: 10
-            entities:
-              - entity: sensor.glances_disk_used_percent
-                show_fill: false
-                show_points: true
-            line_color: orange
-            line_width: 7
-
-      - type: entities
-        entities: 
-          - sensor.glances_cpu_load
-          - sensor.glances_thread
-          - sensor.glances_ram_free
-          - sensor.glances_ram_used
-          - sensor.glances_disk_free
-          - sensor.glances_disk_used
-          - sensor.speedtest_download
-          - sensor.speedtest_upload
-          - sensor.speedtest_ping
 
 
+  - template: sys_monitoring_stack
+    type: "custom:decluttering-card"
+    variables:
+      - system: pi4
 
 
+  - template: sys_monitoring_stack
+    type: "custom:decluttering-card"
+    variables:
+      - system: pi3a
 
-  - type: vertical-stack
-    cards:
-      - type: markdown
-        content: |
-          # pi3a.sys.aleix.cloud
-        style: |
-          ha-card {
-            font-family: Roboto, 'Open Sans', sans-serif;
-            font-size: 100%;
-            -webkit-box-shadow: none;
-            -moz-box-shadow: none;
-            box-shadow: none;
-            text-align: left;
-            background: rgba(0,0,0,0);
-            text-align: center;
-          }
-          h1 {
-            color: white;
-            font-weight: 300 !important;
-            margin: 0px;
-          }
-      - type: horizontal-stack
-        cards:
-        - type: 'custom:mini-graph-card'
-          name: CPU
-          hours_to_show: 6
-          lower_bound: 0
-          upper_bound: 100
-          color_thresholds:
-            - value: 0
-              color: "#37c23b"
-            - value: 50
-              color: "#37c23b"
-            - value: 70
-              color: "#f8841e"
-            - value: 90
-              color: "#eb0c0c"
-          points_per_hour: 10
-          entities:
-            - entity: sensor.pi3a_glances_cpu_used
-              show_fill: false
-              show_points: true
-          line_color: orange
-          line_width: 7
-        - type: 'custom:mini-graph-card'
-          name: RAM
-          hours_to_show: 6
-          lower_bound: 0
-          upper_bound: 100
-          color_thresholds:
-            - value: 0
-              color: "#37c23b"
-            - value: 50
-              color: "#37c23b"
-            - value: 70
-              color: "#f8841e"
-            - value: 90
-              color: "#eb0c0c"
-          points_per_hour: 10
-          entities:
-            - entity: sensor.pi3a_glances_ram_used_percent
-              show_fill: false
-              show_points: true
-          line_color: orange
-          line_width: 7
-        - type: 'custom:mini-graph-card'
-          name: Disk
-          hours_to_show: 6
-          lower_bound: 0
-          upper_bound: 100
-          color_thresholds:
-            - value: 0
-              color: "#37c23b"
-            - value: 50
-              color: "#37c23b"
-            - value: 70
-              color: "#f8841e"
-            - value: 90
-              color: "#eb0c0c"
-          points_per_hour: 10
-          entities:
-            - entity: sensor.pi3a_glances_disk_used_percent
-              show_fill: false
-              show_points: true
-          line_color: orange
-          line_width: 7
       
-      - type: entities
-        entities: 
-          - sensor.pi3a_glances_cpu_load
-          - sensor.pi3a_glances_thread
-          - sensor.pi3a_glances_ram_free
-          - sensor.pi3a_glances_ram_used
-          - sensor.pi3a_glances_disk_free
-          - sensor.pi3a_glances_disk_used
-
-
-
-
-
-
-  - type: vertical-stack
-    cards:
-    - type: markdown
-      content: |
-        # pizw.sys.aleix.cloud
-      style: |
-        ha-card {
-          font-family: Roboto, 'Open Sans', sans-serif;
-          font-size: 100%;
-          -webkit-box-shadow: none;
-          -moz-box-shadow: none;
-          box-shadow: none;
-          text-align: left;
-          background: rgba(0,0,0,0);
-          text-align: center;
-        }
-        h1 {
-          color: white;
-          font-weight: 300 !important;
-          margin: 0px;
-        }
-    - type: horizontal-stack
-      cards:
-      - type: 'custom:mini-graph-card'
-        name: CPU
-        hours_to_show: 6
-        lower_bound: 0
-        upper_bound: 100
-        color_thresholds:
-          - value: 0
-            color: "#37c23b"
-          - value: 50
-            color: "#37c23b"
-          - value: 70
-            color: "#f8841e"
-          - value: 90
-            color: "#eb0c0c"
-        points_per_hour: 10
-        entities:
-          - entity: sensor.pizw_glances_cpu_used
-            show_fill: false
-            show_points: true
-        line_color: orange
-        line_width: 7
-      - type: 'custom:mini-graph-card'
-        name: RAM
-        hours_to_show: 6
-        lower_bound: 0
-        upper_bound: 100
-        color_thresholds:
-          - value: 0
-            color: "#37c23b"
-          - value: 50
-            color: "#37c23b"
-          - value: 70
-            color: "#f8841e"
-          - value: 90
-            color: "#eb0c0c"
-        points_per_hour: 10
-        entities:
-          - entity: sensor.pizw_glances_ram_used_percent
-            show_fill: false
-            show_points: true
-        line_color: orange
-        line_width: 7
-      - type: 'custom:mini-graph-card'
-        name: Disk
-        hours_to_show: 6
-        lower_bound: 0
-        upper_bound: 100
-        color_thresholds:
-          - value: 0
-            color: "#37c23b"
-          - value: 50
-            color: "#37c23b"
-          - value: 70
-            color: "#f8841e"
-          - value: 90
-            color: "#eb0c0c"
-        points_per_hour: 10
-        entities:
-          - entity: sensor.pizw_glances_disk_used_percent
-            show_fill: false
-            show_points: true
-        line_color: orange
-        line_width: 7
-    
-    - type: entities
-      entities: 
-        - sensor.pizw_glances_cpu_load
-        - sensor.pizw_glances_thread
-        - sensor.pizw_glances_ram_free
-        - sensor.pizw_glances_ram_used
-        - sensor.pizw_glances_disk_free
-        - sensor.pizw_glances_disk_used
+  - template: sys_monitoring_stack
+    type: "custom:decluttering-card"
+    variables:
+      - system: pizw
