--- a/devices/media_players.yaml
+++ b/devices/media_players.yaml
@@ -1,5 +1,5 @@
-- platform: spotify
-  client_id: !secret spotify_client_id
-  client_secret: !secret spotify_client_secret
-  aliases:
-    8c841749fa5941dda9b54d94054769e0: 'Cuarto de estar'
+# - platform: spotify
+#   client_id: !secret spotify_client_id
+#   client_secret: !secret spotify_client_secret
+#   aliases:
+#     8c841749fa5941dda9b54d94054769e0: 'Cuarto de estar'
