--- a/lovelace/resources.yaml
+++ b/lovelace/resources.yaml
@@ -1,7 +1,9 @@
+- url: /community_plugin/lovelace-card-preloader/lovelace-card-preloader.js
+  type: js
 - url: /community_plugin/lovelace-layout-card/layout-card.js
   type: module
 - url: /community_plugin/vertical-stack-in-card/vertical-stack-in-card.js
-  type: js
+  type: module
 - url: /community_plugin/lovelace-card-tools/card-tools.js
   type: module
 - url: /community_plugin/weather-card/weather-card.js
@@ -24,8 +26,8 @@
   type: module
 - url: /community_plugin/atomic_calendar/atomic_calendar.js
   type: module
-- url: /community_plugin/lovelace-animated-background/animated-background.js
-  type: module
+# - url: /community_plugin/lovelace-animated-background/animated-background.js
+#   type: module
 - url: /community_plugin/lovelace-gui-sandbox/gui-sandbox.js
   type: module
 - url: /local/nest-layout-card.js
@@ -43,7 +45,7 @@
   type: module
 - url: /browser_mod.js
   type: module
-- url: /local/slider-entity-row.js
-  type: module
+# - url: /local/slider-entity-row.js
+#   type: module
 - url: /community_plugin/light-entity-card/light-entity-card.js
   type: js
