--- a/lovelace/views/00_home_modern/panel.yaml
+++ b/lovelace/views/00_home_modern/panel.yaml
@@ -9,7 +9,7 @@
     style: |
       ha-card {
         margin-top: 30px;
-        margin-right: 30px;
+        margin-right: 0px;
       }
     cards:
     - type: markdown
@@ -32,14 +32,14 @@
         }
     - type: horizontal-stack
       cards: !include group_categories.yaml
-    - type: conditional
+    - type: "conditional"
       conditions:
         - entity: input_text.selected_category
           state: menjador
       card:
         type: vertical-stack
         cards: !include group_bulbs.yaml
-    - type: conditional
+    - type: "conditional"
       conditions:
         - entity: input_text.selected_category
           state: casa
@@ -72,7 +72,7 @@
 
 
         
-    - type: conditional
+    - type: "conditional"
       conditions:
         - entity: input_text.selected_category
           state_not: none
@@ -156,6 +156,7 @@
                 power_state: false
                 source: true
                 volume: true
+                controls: true
               icon: 'mdi:television-classic'
               name: Tele menjador
 
