--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -1,5 +1,8 @@
 resources: !include lovelace/resources.yaml
 
+preload:
+  - conditional
+
 custom_header: 
   header_text: Casa Immaleix
   compact_mode: true
@@ -17,21 +20,22 @@ custom_header:
       config:
         kiosk_mode: true
 
-animated_background:
-  default_url: /community_plugin/lovelace-animated-background/background-animations/sunny.html
-  entity: "weather.dark_sky"
-  state_url:
-      'sunny': /community_plugin/lovelace-animated-background/background-animations/sunny.html
-      'partlycloudy': /community_plugin/lovelace-animated-background/background-animations/cloudy.html
-      'cloudy': /community_plugin/lovelace-animated-background/background-animations/cloudy.html
-      'mostlycloudy': /community_plugin/lovelace-animated-background/background-animations/mostlycloudy.html
-      'clear-night': /community_plugin/lovelace-animated-background/background-animations/night.html
-      'fog': /community_plugin/lovelace-animated-background/background-animations/fog.html
+# animated_background:
+#   default_url: /community_plugin/lovelace-animated-background/background-animations/sunny.html
+#   entity: "weather.dark_sky"
+#   state_url:
+#       'sunny': /community_plugin/lovelace-animated-background/background-animations/sunny.html
+#       'partlycloudy': /community_plugin/lovelace-animated-background/background-animations/cloudy.html
+#       'cloudy': /community_plugin/lovelace-animated-background/background-animations/cloudy.html
+#       'mostlycloudy': /community_plugin/lovelace-animated-background/background-animations/mostlycloudy.html
+#       'clear-night': /community_plugin/lovelace-animated-background/background-animations/night.html
+#       'fog': /community_plugin/lovelace-animated-background/background-animations/fog.html
 
 decluttering_templates:
   nest_button: !include lovelace/decluttering_templates/nest_button.yaml
   nest_button_category: !include lovelace/decluttering_templates/nest_button_category.yaml
   nest_picture_button: !include lovelace/decluttering_templates/nest_picture_button.yaml
+  sys_monitoring_stack: !include lovelace/decluttering_templates/sys_monitoring_stack.yaml
 
 title: Casa
 views:
