--- a/lovelace/resources.yaml
+++ b/lovelace/resources.yaml
@@ -1,34 +1,34 @@
-- url: /community_plugin/lovelace-card-preloader/lovelace-card-preloader.js
+- url: /hacsfiles/lovelace-card-preloader/lovelace-card-preloader.js
   type: js
-- url: /community_plugin/lovelace-layout-card/layout-card.js
+- url: /hacsfiles/lovelace-layout-card/layout-card.js
   type: module
-- url: /community_plugin/vertical-stack-in-card/vertical-stack-in-card.js
+- url: /hacsfiles/vertical-stack-in-card/vertical-stack-in-card.js
   type: module
-- url: /community_plugin/lovelace-card-tools/card-tools.js
+- url: /hacsfiles/lovelace-card-tools/card-tools.js
   type: module
-- url: /community_plugin/weather-card/weather-card.js
+- url: /hacsfiles/weather-card/weather-card.js
   type: module
-- url: /community_plugin/mini-media-player/mini-media-player-bundle.js
+- url: /hacsfiles/mini-media-player/mini-media-player-bundle.js
   type: module
-- url: /community_plugin/mini-graph-card/mini-graph-card-bundle.js
+- url: /hacsfiles/mini-graph-card/mini-graph-card-bundle.js
   type: module
-- url: /community_plugin/simple-weather-card/simple-weather-card-bundle.js
+- url: /hacsfiles/simple-weather-card/simple-weather-card-bundle.js
   type: module
-- url: /community_plugin/simple-thermostat/simple-thermostat.js
+- url: /hacsfiles/simple-thermostat/simple-thermostat.js
   type: module
-- url: /community_plugin/custom-header/custom-header.js
+- url: /hacsfiles/custom-header/custom-header.js
   type: module
-- url: /community_plugin/button-card/button-card.js
+- url: /hacsfiles/button-card/button-card.js
   type: module
-- url: /community_plugin/lovelace-card-mod/card-mod.js
+- url: /hacsfiles/lovelace-card-mod/card-mod.js
   type: js
-- url: /community_plugin/decluttering-card/decluttering-card.js
+- url: /hacsfiles/decluttering-card/decluttering-card.js
   type: module
-- url: /community_plugin/atomic_calendar/atomic_calendar.js
+- url: /hacsfiles/atomic_calendar/atomic_calendar.js
   type: module
-# - url: /community_plugin/lovelace-animated-background/animated-background.js
+# - url: /hacsfiles/lovelace-animated-background/animated-background.js
 #   type: module
-- url: /community_plugin/lovelace-gui-sandbox/gui-sandbox.js
+- url: /hacsfiles/lovelace-gui-sandbox/gui-sandbox.js
   type: module
 - url: /local/nest-layout-card.js
   type: js
@@ -38,14 +38,16 @@
   type: module
 - url: /local/markdown-mod.js
   type: module
-- url: /community_plugin/bar-card/bar-card.js
+- url: /hacsfiles/bar-card/bar-card.js
   type: js
 # Added for 60-experiment UI
-- url: /community_plugin/circle-sensor-card/circle-sensor-card.js
+- url: /hacsfiles/circle-sensor-card/circle-sensor-card.js
   type: module
 - url: /browser_mod.js
   type: module
 # - url: /local/slider-entity-row.js
 #   type: module
-- url: /community_plugin/light-entity-card/light-entity-card.js
+- url: /hacsfiles/light-entity-card/light-entity-card.js
   type: js
+- url: /hacsfiles/lovelace-multiple-entity-row/multiple-entity-row.js
+  type: module
