--- a/scripts/tv/noticies.yaml
+++ b/scripts/tv/noticies.yaml
@@ -1,9 +1,9 @@
-'tv_turn_on_netflix':
-  alias: TV Netflix
+'tv_turn_on_dinner':
+  alias: Vamos a cenar
   sequence:
   - service: scene.turn_on
-    data: 
-      entity_id: scene.tele
+    data:
+      entity_id: scene.cena
   - service: media_player.turn_on
     data: 
       entity_id: media_player.tele
@@ -11,7 +11,12 @@
   - service: media_player.select_source
     data: 
       entity_id: media_player.tele
-      source: 'Netflix'
+      source: 'Live TV'
+  - service: media_player.play_media
+    data: 
+      entity_id: media_player.tele
+      media_content_id: "TV3HD"
+      media_content_type: "channel"
   - service: media_player.volume_mute
     data:
       entity_id: media_player.tele
@@ -19,4 +24,5 @@
   - service: media_player.volume_set
     data:
       entity_id: media_player.tele
-      volume_level: 0.13
+      volume_level: 0.1
+
