--- a/scripts/tv/wii.yaml
+++ b/scripts/tv/wii.yaml
@@ -1,22 +1,17 @@
-'tv_turn_on_dinner':
-  alias: Vamos a cenar
+'tv_turn_on_wii':
+  alias: TV Wii
   sequence:
   - service: scene.turn_on
-    data:
-      entity_id: scene.cena
+    data: 
+      entity_id: scene.tele
   - service: media_player.turn_on
     data: 
       entity_id: media_player.tele
-  - wait_template: "{{ is_state('media_player.tele', 'playing') }}"
+  - wait_template: "{{ is_state('media_player.tele', 'on') }}"
   - service: media_player.select_source
     data: 
       entity_id: media_player.tele
-      source: 'Live TV'
-  - service: media_player.play_media
-    data: 
-      entity_id: media_player.tele
-      media_content_id: "TV3HD"
-      media_content_type: "channel"
+      source: 'Wii'
   - service: media_player.volume_mute
     data:
       entity_id: media_player.tele
@@ -24,5 +19,4 @@
   - service: media_player.volume_set
     data:
       entity_id: media_player.tele
-      volume_level: 0.1
-
+      volume_level: 0.13
