--- a/scripts/tv/xbox.yaml
+++ b/scripts/tv/xbox.yaml
@@ -10,7 +10,7 @@
   - service: media_player.turn_on
     data: 
       entity_id: media_player.tele
-  - wait_template: "{{ is_state('media_player.tele', 'playing') }}"
+  - wait_template: "{{ is_state('media_player.tele', 'on') }}"
   - service: media_player.select_source
     data: 
       entity_id: media_player.tele
